# Knowledge

./: .env.example  .gitignore  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_migration_baseline.py  0002_execution_framework.py  0003_identity.py  0004_user_sessions.py  0005_provider_credentials.py  0006_topic_source_domain.py  0007_ingestion_runs.py  0008_embedding_settings.py  0009_source_import_requests.py  0010_source_lifecycle.py  0011_source_url_identity.py
backend/app/: auth.py  chunks.py  config.py  dense_index.py  embedding.py  embedding_settings_api.py  ingestion.py  main.py  observability.py  parsed_documents.py  provider_credentials.py  retrieval.py  retrieval_api.py  retrieval_scope.py  retrieval_service.py  sources.py  sparse_index.py  topics.py  worker.py
backend/app/infrastructure/: background_processing.py  chunk_store.py  database.py  dense_milvus.py  embedding_http.py  embedding_query.py  (+20 more)
backend/tests/: test_auth_api.py  test_background_processing.py  test_chunks.py  test_config.py  test_dense_index.py  test_deployment.py  test_embedding.py  test_embedding_settings.py  test_execution.py  test_health.py  test_identity.py  test_ingestion_runs.py  test_observability.py  test_parsed_documents.py  test_provider_credentials.py  test_provider_credentials_api.py  test_retrieval.py  test_retrieval_api.py  test_session_api.py  test_sessions.py  test_source_imports.py  test_source_lifecycle.py  test_sparse_index.py  test_topics.py  test_worker.py
(+15 files in other folders)
